--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,136 +1,308 @@
-:root {
-    --bkgdcolor: #bab19c;
-    --logocenter: #412354;
-    --logochoc: #402312;
-    --logorasp: #9e1460;
-    --darkberry: #51082f;
-    font-size: 10px;
+/* from _reset.scss Materialize */
+/* Resets the box size of every element */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 16px;
+    /* CSS HEX */
+    --jet: #2a2b2aff;
+    --nickel: #706c61ff;
+    --cosmic-latte: #f8f4e3ff;
+    --paradise-pink: #e5446dff;
+    --coral: #ff8966ff;
 }
 
-.logo {
-    max-width: 96%;
-    border-radius: 15px 15px;
+/* Gives the body element a parent height to compare against */
+html {
+    height: 100%;
+    background-color: var(--cosmic-latte);
+    font-family: 'Rubik', sans-serif;
 }
 
 body {
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 1.5rem;
-    line-height: 1.5rem;
-    color: black;
-    background-color: var(--bkgdcolor);
-    background-repeat: none;
-    padding: 2rem 2rem;
-    margin-left: 20px;
-    margin-right: 20px;
+    min-height: 100%;
+    line-height: 1.25;
 }
 
-p { 
-    color: black;
-    font-size: 1.75rem;
-    line-height: 1.85rem;
-    margin: auto;
-    padding-bottom: 1.25rem;
+/* headers */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-size: 100%;
+    color: var(--jet);
 }
 
-a:link {
-    color:#412354;
-}
-
-a:visited {
-    color: #9e1460;
-}
-
-a:hover {
-    color: blueviolet;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    display: flex;
-    margin-bottom: .625rem;
-    color: var(--logocenter);
-    line-height: 1.1;
+.mainHeader {
+    padding-left: 20px;
+    margin: none;
+    font-weight: 800;
+    color: var(--jet);
 }
 
 h1 {
-    color: black;
-    font-weight: bolder;
-    line-height: 1.5;
-    font-size: 2.5rem;
-    justify-items: center;
-    text-align: center;
+    text-align: left;
+    font-size: 2.75rem;
 }
 
 h2 {
-    color:var(--darkberry);
-    font-weight: bold;
-    line-height: 1.25;
-    font-size: 2.25rem;
-    text-decoration: none;
+    text-align: left;
+    font-size: 2.5rem;
 }
 
 h3 {
-    margin-bottom: .625rem;
-    color:var(--darkberry);
-    font-weight: bold;
-    line-height: 1.25;
+    text-align: left;
+    font-size: 2.25rem;
+}
+
+h4 {
+    text-align: left;
     font-size: 2rem;
-    text-decoration: none;
 }
 
+h5 {
+    text-align: left;
+    font-size: 1.75rem;
+}
+
+h6 {
+    text-align: left;
+    font-size: 1.5rem;
+}
+
+
+/* nav bar & wrapper */
 nav {
-    display: flex;
-    background-color: var(--bkgdcolor);
+    height: auto;
+    padding-bottom: 20px;
+    background-color: var(--coral);
 }
 
-nav a{
-    padding: 1vw 5vw 1vw 5vw;
-    text-decoration: none;
+h5.nav {
+    color: var(--cosmic-latte);
+    font-size: 1.5rem;
+    padding-bottom: 20px;
+    margin-top: 0;
+    margin-bottom: 20px;
     text-align: center;
+}
+
+.nav-title {
+    display: inline-block;
+    font-size: 2rem;
+    padding: 28px 0;
+    background-color: var(--coral);
+}
+
+.nav-content {
+    position: relative;
+    line-height: normal;
+}
+
+.nav-wrapper {
+    background-color: var(--coral);
+}
+
+/* p- tag */
+p {
+    text-align: left;
+    font-size: 1rem;
+}
+
+/* Matches the font of special elements to the rest of the page */
+input,
+select,
+option,
+optgroup,
+textarea,
+button,
+pre,
+code {
+    font-size: 100%;
+    font-family: 'Rubik', sans-serif;
+}
+
+/* Removes default bullet points from lists */
+ol,
+ul {
+    list-style: none;
+    text-align: left;
+}
+
+/* container with flex property */
+.container {
+    font-family: 'Rubik', sans-serif;
+    margin: 0 auto;
+    max-width: 948px;
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+/* p container non-flex */
+.p-container {
+    display: block;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .row {
+    margin: 20px 20px;
+    column-gap: 20px;
+    row-gap: 20px;
+}
+
+
+/* divs */
+div {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    align-items: center;
+}
+
+div .no-pad {
+    padding: 0;
+}
+
+div .no-pad-bot {
+    padding-bottom: 0;
+}
+
+div .no-pad-top {
+    padding-top: 0;
+}
+
+
+/* Cards from _cards.scss Materialize */
+.card {
+    margin: 20px;
+}
+
+img .card-image {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
 }
 
-.devport {
+.card-image {
+    position: relative;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
 }
 
-.imgbox {
-    display: flex;
-    flex-wrap: wrap;
-    border-radius: 8px;
-    padding: 1vw 5vw 1vw 5vw;
-    margin-top: 2rem;
-    border-radius: 8px;
-    transition: all 0.5s ease-in-out;
+img .placeholder {
+    opacity: .6;
 }
 
-.imagebox-design {
-    border-radius: 8px;
-    border-width: medium;
+.card-title {
+    color: white;
+    font-weight: 600;
+    background-color: var(--jet);
+    opacity: 0.6;
+    width: 300px;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    max-width: 100%;
+    font-family: 'Rubik', sans-serif;
 }
 
-.imgbox:hover .imagebox-design{
-    flex: 0 2 1;
-    cursor:pointer;
-    box-shadow: inset 0px 3px 8px rgba(158, 20, 96, 1), 0 0 15px rgba(64, 35, 18, 1);
+.card-title:hover {
+    color: white;
+    opacity: 1;
+    font-family: 'Rubik', sans-serif;
+}
 
+.card-action {
+    color: var(--paradise-pink);
+}
+
+.card-action:hover  {
+    color: var(--coral);
+}
+
+/* card sizes */
+.card-small {
+    width: 200px;
+    height: 300px;
+}
+
+.card-medium {
+    width: 300px;
+    height: 400px;
+}
+
+.card-large {
+    width: 400px;
+    height: 500px;
+}
+
+.card:hover {
+    width: 30%;
+    padding: 0px 5px;
+}
+
+/* Contact Info  */
+.colorNickel {
+    color: var(--nickel);
+}
+
+.hyperlink {
+    color: var(--paradise-pink)
+}
+
+.hyperlink:hover {
+    color: var(--coral);
+}
+
+/* footer */
+.footer {
+    font-size: .75rem;
+    text-align: center;
+    align-content: center;
+    color: var(--nickel);
+}
+
+.portfolioPic {
+    max-width: 150px;
+    border-radius: 100px 100px 100px 100px;
+    margin: 25px;
+}
+
+.footer-text {
+    padding: 50px;
+    text-align: center;
+    margin: 0;
+    padding: 1rem;
 }
 
 .selfie {
-    border-radius: 50% 50%;
-    max-width: 150px;
-    box-shadow: inset 0px 3px 8px rgba(158, 20, 96, 1), 0 0 15px rgba(64, 35, 18, 1);
+    box-shadow: inset 0px 3px 8px var(--nickel);
+    border-style: outset;
+    border-color: var(--coral);
+    box-shadow: inset 0px 3px 8px var(--jet), 0 0 15px var(--nickel);
+
 }
 
-footer {
-    text-align: center;
-    display: inline;
+/* Icons */
+.material-symbols-outlined {
+    background-color: var(--paradise-pink) ;
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 48;
+}
+
+.material-symbols-outlined:hover {
+    background-color: var(--coral);
 }
 
 /* flex needs @media */
@@ -147,3 +319,4 @@ footer {
         padding: 11% 8%;
     }
 }
+
